What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

October 25, 2010
* [ben.boeckel] Fix jp3d version

October 24, 2010
* [antonin] Fixed doxygen data inside source code (from winfried)

October 22, 2010
* [ben.boeckel] Don't install jp3d and libopenjpeg headers to the same place

October 22, 2010
* [ben.boeckel] Install man pages when using CMake

October 22, 2010
! [ben.boeckel] Default to building shared libraries

October 22, 2010
* [antonin] Patch to support the MSVC Win 64 builds (from szekerest)

October 22, 2010
* [antonin] Currently the Visual Studio builds are broken in the SVN. Attached a patch to fix this issue (from szekerest)

October 22, 2010
* [szukw000] replaced 'cp -d' with 'cp -P' for MacOSX

October 22, 2010
* [szukw000] 'jpwl/Makefile.am': added CFLAGS for bin_PROGRAMS

October 22, 2010
+ [szukw000] added 'libopenjpeg.pc.in'
! [szukw000] changed 'configure.ac' to create 'libopenjpeg.pc'
! [szukw000] changed 'Makefile.am' to [un]install 'libopenjpeg.pc'
! [szukw000] changed 'doc/Makefile.am' : 'uninstall-hook' added

October 20, 2010 
* [antonin] fixed help display (patch from winfried)

October 20, 2010 
* [antonin] 
    fixed paths to png and tiff in CMakeLists.txt (patch from winfried)
    fixed link to lcms library (patch from winfried)

October 18, 2010 
* [antonin] fixed options and help display (patch from winfried) 

October 18, 2010
! [szukw000]
	doc/Makefile.am 
	doc/Makefile.nix
	jp3d/Makefile.nix
	jpwl/Makefile.nix
	Makefile.nix
	config.nix

October 17, 2010
! [szukw000]
	configure.ac : 'enable_shared' YES by default
	doc/Makefile.am :
		'all-local' and 'install-data-hook' added
		'with_doxygen' conditional added
	Makefile.am : 'doc' directory no longer substituted in SUBDIRS

	to link binaries statically: '-static' added to:
		codec/Makefile.am
		mj2/Makefile.am
		jpwl/Makefile.am
		jp3d/codec/Makefile.am

	mj2/Makefile.am : 'with_libjpwl' removed
	mj2/Makefile.nix : 'with_libjpwl' removed
